<?xml version="1.0" encoding="UTF-8"?>
<!--
/******************************************************************************
 *                                                                            *
 * Jaudiotagger is free software; you can redistribute it and/or modify       *
 * it under the terms of the GNU Lesser General Public License as published   *
 * by the Free Software Foundation; either version 2.1 of the License, or     *
 * (at your option) any later version.                                        *
 *                                                                            *
 * This program is distributed in the hope that it will be useful,            *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of             *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the              *
 * GNU General Public License for more details.                               *
 *                                                                            *
 * You should have received a copy of the GNU General Public License          *
 * along with this program; if not, write to the Free Software                *
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA   *
 *                                                                            *
 ******************************************************************************/
/* $Id$ */
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.tsimbalyuk-sergiy</groupId>
   <artifactId>jaudiotagger</artifactId>
   <version>2.5.5-j11</version>
   <packaging>jar</packaging>
   <name>jaudiotagger</name>
   <description>
    The aim of this project is to provide a world class Java library
    for editing tag information in audio files.
    Most existing solutions are not java based inhibiting the use of
    java applications with digital files.
   </description>
   <url>https://bitbucket.org/ijabz/jaudiotagger</url>
   <inceptionYear>2005</inceptionYear>
   <issueManagement>
      <url>https://bitbucket.org/ijabz/jaudiotagger/issues</url>
   </issueManagement>
   <organization>
      <name>jthink.net</name>
      <url>http://jthink.net/</url>
   </organization>
   <developers>
      <developer>
         <id>paultaylor</id>
         <name>Paul Taylor</name>
         <email>paultaylor@jthink.net</email>
         <organization>jthink</organization>
         <organizationUrl>http://www.jthink.net/jaudiotagger</organizationUrl>
         <roles>
            <role>Project Manager</role>
            <role>Java Developer</role>
         </roles>
         <timezone />
         <properties />
      </developer>
   </developers>
   <licenses>
      <license>
         <name>LGPL</name>
         <url>http://www.gnu.org/copyleft/lesser.html</url>
      </license>
   </licenses>
   <dependencies>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
         <scope>test</scope>
      </dependency>
   </dependencies>
   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <encoding>UTF-8</encoding>
               <release>${java.version}</release>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
            <configuration>
              <argLine>-Dfile.encoding=UTF-8</argLine>
            </configuration>        
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
            <version>2.4</version>
           <executions>
             <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
             </execution>
           </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.1.1</version>
           <configuration>
             <doclint>none</doclint>
           </configuration>
           <executions>
             <execution>
                <id>attach-javadocs</id>
                <goals>
                   <goal>jar</goal>
                </goals>
             </execution>
           </executions>
         </plugin>
         <plugin>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.4.1</version>
            <configuration>
               <useReleaseProfile>false</useReleaseProfile>
               <releaseProfiles>release</releaseProfiles>
               <autoVersionSubmodules>true</autoVersionSubmodules>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.eluder.coveralls</groupId>
            <artifactId>coveralls-maven-plugin</artifactId>
            <version>4.0.0</version>
         </plugin>
      </plugins>
   </build>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <java.version>11</java.version>
   </properties>   
   <scm>
      <connection>scm:git:https://github.com/ijabz/jaudiotagger.git</connection>
      <developerConnection>scm:git:git@github.com:ijabz/jaudiotagger.git</developerConnection>
      <url>https://github.com/ijabz/jaudiotagger</url>
      <tag>jaudiotagger-2.2.6</tag>
   </scm>
   <distributionManagement>
      <repository>
         <id>github</id>
         <name>GitHub tsimbalyuk-sergiy jaudiotagger</name>
         <url>https://maven.pkg.github.com/tsimbalyuk-sergiy/jaudiotagger</url>
      </repository>
   </distributionManagement>
</project>
